package Entidades.Elementos;

import Entidades.Jugadores.Jugador;

public interface Interactuable {
    void interactuar (Jugador jugador);
}